[package]
authors = ["James Munns <james@onevariable.com>"]
name = "balcony"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
smart-leds = "0.3.0"
ws2812-spi = { version = "0.4.0", features = ["mosi_idle_high"] }
groundhog = "0.2.5"
maxwell = "0.1.1"
rand_chacha = { version = "0.3.1", default-features = false }

# [dependencies.stm32g0]
# path = "./vendor/stm32g0"
# features = ["stm32g031"]

[dependencies.stm32g0xx-hal]
# path = "./vendor/stm32g0xx-hal"
git = "https://github.com/sprocket-board/stm32g0xx-hal"
branch = "balcony-project"
features = ["stm32g031", "rt"]

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }

[patch.crates-io.stm32g0]
# path = "./vendor/stm32g0"
git = "https://github.com/sprocket-board/stm32-rs-nightlies"
rev = "ccef3a2a7b4184a61707da87b182d621d5fe830a"
